# TeacherDiscordBot

./: .flake8  .gitignore  .prettierignore  .replit  README.md  Syllabus (copy).sql  app.py  bugs.txt  cloud_setup.md  cloud_setup.txt  cmds.txt  crud.py  database.py  database_setup.md  deploy.sh  format_all.sh  keep_alive.py  main.py  mainBackup.py  models.py  my_flask_app.py  neon_export.sql  oracle_cloud_setup.txt  pyproject.toml  replit.md  replit.nix  requirements.txt  requirements_deploy.txt  scrap.sql  scrap3.txt  test_deploy_script.py  utils.py
attached_assets/: Pasted-0-teacher-bot-Traceback-most-recent-call-last-0-teacher_1775788089389.txt  Pasted-hillip-wellheuser-teacher-discord-bot-bot-pm2-logs-teac_1775755688442.txt  Pasted-phillip-wellheuser-teacher-discord-bot-bot-bot-venv-bin_1776303030234.txt  Pasted-phillip-wellheuser-teacher-discord-bot-bot-bot-venv-bin_1776303119675.txt  Pasted-phillip-wellheuser-teacher-discord-bot-bot-bot-venv-bin_1776303322961.txt  Pasted-phillip-wellheuser-teacher-discord-bot-bot-pm2-logs-tea_1775769136524.txt  Pasted-phillip-wellheuser-teacher-discord-bot-bot-pm2-logs-tea_1775769933850.txt  Pasted-phillip-wellheuser-teacher-discord-bot-bot-pm2-restart-_1775784169667.txt  Pasted-phillip-wellheuser-teacher-discord-bot-bot-pm2-restart-_1775784379059.txt
commands/: add.py  assign.py  assignment.py  cmds.py  columns.py  complete.py  graveyard.py  list_series.py  poll.py  remove.py  report_bug.py  syllabus.py  todo.py  update.py  update_assignment.py  url.py
static/: scripts.js  syllabusScripts.js
templates/: author.html  (+7 more)
(+5 files in other folders)
