[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Phillip Wellheuser <phillip.wellheuser@gmail>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
discord = "^2.3.2"
discord-py = "^2.3.2"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-bootstrap = "^3.3.7.1"
psycopg2-binary = "^2.9.9"
replit = "^3.6.1"
sqlalchemy = "^2.0.30"
app = "^0.0.1"
idna = "^3.10"
multidict = "^6.5.0"

[tool.poetry.dev-dependencies]
pytest = "8.2"
pytest-asyncio = "0.24.0"
pytest-mock = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2"
pytest-asyncio = "0.24.0"
pytest-mock = "3.7.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

